Added android custom tabs